Finito condizioni di campo lontano

--- a/antenne/antenne.tex
+++ b/antenne/antenne.tex
@@ -130,7 +130,16 @@
 \renewcommand{\J}{\ensuremath{\vec{J}}}
 \newcommand{\M}{\ensuremath{\vec{M}}}
 \renewcommand{\A}{\ensuremath{\vec{A}}}
-
+\renewcommand{\S}{\ensuremath{\vec{S}}}
+\renewcommand{\P}{\ensuremath{\vec{P}}}
+%riduzzioni antenne
+\newcommand{\hz}{\ensuremath{\hat{z}}}
+\newcommand{\hth}{\ensuremath{\hat{z}}}
+\newcommand{\hphi}{\ensuremath{\hat{z}}}
+\newcommand{\hr}{\ensuremath{\hat{r}}}
+\newcommand{\ejbr}{\ensuremath{e^{-\jmath \beta r}}}
+\newcommand{\ejbrp}{\ensuremath{e^{\jmath \beta r}}}
+\newcommand{\oqme}{\ensuremath{\omega^2 \mu \epsilon}}
 %Derivatives shortcut
 \newcommand{\deriv}[3][]{% \deriv[<order>]{<func>}{<var>}
   \ensuremath{\frac{\partial^{#1} {#2}}{\partial {#3}^{#1}}}}
