Aggiunto dipolo elementare. fatto pattern di radiazione in campo

--- a/antenne/antenne.tex
+++ b/antenne/antenne.tex
@@ -26,7 +26,7 @@
 
 % tikz figures
 \usepackage[usenames, dvipsnames, table, tikz]{xcolor}
-\usepackage{tikz}
+\usepackage{tikz,pgfplots}
 \usetikzlibrary{shapes, arrows,automata}
 
 % image path
@@ -134,8 +134,8 @@
 \renewcommand{\P}{\ensuremath{\vec{P}}}
 %riduzzioni antenne
 \newcommand{\hz}{\ensuremath{\hat{z}}}
-\newcommand{\hth}{\ensuremath{\hat{z}}}
-\newcommand{\hphi}{\ensuremath{\hat{z}}}
+\newcommand{\hth}{\ensuremath{\hat{\theta}}}
+\newcommand{\hphi}{\ensuremath{\hat{\Phi}}}
 \newcommand{\hr}{\ensuremath{\hat{r}}}
 \newcommand{\ejbr}{\ensuremath{e^{-\jmath \beta r}}}
 \newcommand{\ejbrp}{\ensuremath{e^{\jmath \beta r}}}
