--- a/antenne/antenne.tex
+++ b/antenne/antenne.tex
@@ -25,6 +25,7 @@
 \usepackage{cases}
 
 % tikz figures
+\usepackage{forloop}
 \usepackage[usenames, dvipsnames, table, tikz]{xcolor}
 \usepackage{tikz,pgfplots}
 \usetikzlibrary{shapes, arrows,automata}
