--- a/antenne/onde_piane.tex
+++ b/antenne/onde_piane.tex
@@ -282,9 +282,9 @@ Le onde piane sono particolari soluzioni delle equazioni di Maxwell che hanno pr
 	\begin{esp}
 		& \rot \h \cdot \e - \h \cdot \rot \e
 			= \e \jt + \sigma |\e|^2 + \epsilon \e \deriv{\e}{t} - \h \mu \deriv{\h}{t} \\
-		& -\diverg(\e \times \h) - \e \j = \sigma |\e|^2 + \epsilon \deriv{|\e|^2}{t} + \mu \deriv{|\h|^2}{t}
+		& -\diverg(\e \times \h) - \e \jmath = \sigma |\e|^2 + \epsilon \deriv{|\e|^2}{t} + \mu \deriv{|\h|^2}{t}
 	\end{esp}
-	
+
 	\subsection{Potenza con i vettori di Steinmetz}
 
 
