--- a/antenne/onde_piane.tex
+++ b/antenne/onde_piane.tex
@@ -333,7 +333,7 @@ Le onde piane sono particolari soluzioni delle equazioni di Maxwell che hanno pr
 	Grazie alla relazione appena ricavata, è possibile applicare la trasformata di Steinmetz all'equazione \ref{eq:bilancio_potenza_EM}, ottenendone il duale.
 
 	\begin{esp} \label{eq:bilancio_potenza_EM_steinmetz}
-		& \underbrace{ - \int_V \E \cdot \J ~ dV}_{\text{potenza dai generatori}}
+		& \underbrace{ - \int_V \E \cdot \J^* ~ dV}_{\text{potenza dai generatori}}
 			= \underbrace{\int_V \sigma \frac{|\E|^2}{2} dV}_{\text{effetto Joule}}
 			+ \underbrace{\int_V \jmath \omega \left[\mu \frac{|\H|^2}{2} - \epsilon \frac{|\E|^2}{2} \right] dV}
 				_{\text{variazione di energia \textsc{EM} in } V}
